# playground

./: .gitignore  README.md
disjoint-haskell-vs-idris/: MashRnd.idr  OptionsInHaskell.html  OptionsInHaskell.lhs  OptionsInIdris.idr  OptionsInIdrisBroken.idr  bootstrap.css  go
ghc-memory-usage/: compile.sh  go.sh  plot_runs.py  prof_bytestring-char8_1000  prof_bytestring-char8_10000  prof_bytestring-char8_2000  prof_bytestring-char8_3000  prof_bytestring-char8_4000  prof_bytestring-char8_5000  prof_bytestring-char8_6000  prof_bytestring-char8_7000  prof_bytestring-char8_8000  prof_bytestring-char8_9000  prof_bytestring_1000  prof_bytestring_10000  prof_bytestring_2000  prof_bytestring_3000  prof_bytestring_4000  prof_bytestring_5000  prof_bytestring_6000  prof_bytestring_7000  prof_bytestring_8000  prof_bytestring_9000  prof_lazy_bytestring-char8_1000  prof_lazy_bytestring-char8_10000  prof_lazy_bytestring-char8_2000  prof_lazy_bytestring-char8_3000  prof_lazy_bytestring-char8_4000  prof_lazy_bytestring-char8_5000  prof_lazy_bytestring-char8_6000  prof_lazy_bytestring-char8_7000  prof_lazy_bytestring-char8_8000  prof_lazy_bytestring-char8_9000  prof_lazy_bytestring_1000  prof_lazy_bytestring_10000  prof_lazy_bytestring_2000  prof_lazy_bytestring_3000  prof_lazy_bytestring_4000  prof_lazy_bytestring_5000  prof_lazy_bytestring_6000  (+16 more)
ghc-memory-usage/zurihac2015-johan-tibbel/: README.md
haskell/TH/: Keyword.hs  Main.hs  TH.cabal  build_in_sandbox.sh
haskell/airports/: Airports.hs  LICENSE  README.md  airports.cabal  build_in_sandbox.sh  build_in_sandbox_scratch.sh  go.sh  iata.txt  output-2016-03-11.txt  output.txt  output_sorted_uniq.txt
haskell/applicatives_vs_monads_composition/: ApplicativeComposeFinal.hs  ApplicativeComposeStart.hs  Composition.html  Composition.lhs  TypeCheckId.hs  go
haskell/bigdata/: BigData.hs  ChangeLog.md  LICENSE  Notes.html  Notes.lhs  Plots.hs  SampleData.hs  bigdata.cabal  build_sandbox.sh  cabal.config  go
haskell/circus/: Circus.html  Circus.lhs  JavaSoln.java  go
haskell/classy-mtl/: Classy.html  Classy.lhs  Main.hs  README.md  build_in_sandbox.sh  build_in_sandbox_scratch.sh  cabal.config  classy-mtl.cabal  go
haskell/coarbitrary/: CoArbitrary.lhs  README.md  go.sh
haskell/cps/: CPS.hs
haskell/dp/: DP00.hs  DP01.hs  DP02.hs  DP03.hs  DP04.hs  DP05.hs  DP06.hs  DP07.hs  DP08.hs  DP09.hs  DP10.hs  DPloeb.html  DPloeb.lhs  go
haskell/emacs/: README.md
haskell/exceptions-in-parallel/: E.html  E.lhs  build_in_sandbox_scratch.sh  cabal.config  exceptions-in-parallel.cabal  go
haskell/fundeps/: Fundeps.html  Fundeps.lhs  bootstrap.css  go
haskell/ghc_symbol_lookup/: .gitignore  A.hs  A2.hs  B.hs  B2.hs  Check.hs  CheckKind.hs  CheckType.hs  HelloWorld.hs  LookupTool.hs  Muddle.hs  R.hs  a_simple_example.hs  dynamic_load.hs  go  guts.lhs  haskell_names_example.hs  names.txt  notes.md  run_A.sh
haskell/java-defun/: Defun.html  Defun.lhs  go
haskell/lens/: L.hs
haskell/lens-has/: LensHas.html  LensHas.lhs  go
haskell/literate_template/: Foo.html  Foo.lhs  header.html
haskell/loeb_and_moeb/: Loeb.html  Loeb.lhs  go
haskell/mapm/: MapM.html  MapM.lhs  go
haskell/minilaboratin/: MiniLab.hs  README.md
haskell/monads/: Identity.hs  State.hs  (+1 more)
haskell/mvar/: LICENSE  MVarPost.html  MVarPost.lhs  go  mvar.cabal
haskell/note-on-operational/: Note.html  Note.lhs  README.md  cabal.config  go  note-on-operational.cabal
haskell/notes-on-free-monads-are-good-for-you/: Foo.hs  Notes.html  Notes.lhs  notes-on-free-monads-are-good-for-you.cabal
idris/: README.md  effects01.idr  effects02.idr  elem.idr  expressioncalculator.idr  expressioncalculator01.idr  expressioncalculator02.idr  flags01.idr  hello.idr  nonnat.idr  options.idr  resolve.idr  synax01.idr  tmp.idr  transition.idr  transition02.idr  transition03.idr  tutorial01.idr  vadd.idr
nipype/: README.md  graph.dot  graph_detailed.dot  helloiterables.py
talk-template/: README.md  build_in_sandbox.sh  install_render.js.sh  leftalign.css  render.sh  talk-template.cabal  talk.md
(+83 files in other folders)
