name:                exceptions-in-parallel
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/carlohamalainen/playground
license:             BSD-2
license-file:        LICENSE
author:              Carlo Hamalainen
maintainer:          carlo@carlo-hamalainen.net
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable exceptions-in-parallel
  main-is:             E.lhs
  -- other-modules:
  other-extensions:    ScopedTypeVariables
  build-depends:       base >=4.7 && <4.8
                     , parallel-io
                     , enclosed-exceptions
                     , exceptions
                     , async
                     , conduit
  -- hs-source-dirs:
  default-language:    Haskell2010
