name:                mvar
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/carlohamalainen/playground
license:             BSD3
license-file:        LICENSE
author:              Carlo Hamalainen
maintainer:          carlo@carlo-hamalainen.net
copyright:           2015 Carlo Hamalainen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable mvar-exe
  hs-source-dirs:      .
  main-is:             MVarPost.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mvar
                     , parallel-io
  default-language:    Haskell2010

test-suite mvar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mvar
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carlohamalainen/playground
