name:                notes-on-free-monads-are-good-for-you
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Carlo Hamalainen
maintainer:          carlo@carlo-hamalainen.net
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Notes
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7, text >=1.1 && <1.2, containers >=0.5 && <0.6, free >=4.7 && <4.8, QuickCheck >=2.7 && <2.8, safe
  -- hs-source-dirs:
  default-language:    Haskell2010
